# Doominati

./: .gitattributes  .gitignore  CMakeLists.txt  FindSDL2.cmake  README.md
AL/: AudioRenderer.cpp  AudioRenderer.hpp  CMakeLists.txt  OpenAL.hpp  Renderer.cpp  Renderer.hpp  Sound.cpp  Sound.hpp  SoundSource.cpp  SoundSource.hpp  SoundSourceDynamic.hpp  SoundSourceFixed.hpp  Types.hpp
AL/AudioRenderer/: Sound.cpp
AL/Renderer/: Sound.cpp
AL/Sound/: FLAC.cpp  Opus.cpp  Vorbis.cpp  WAVE.cpp
CMake/: FindEigen3.cmake  FindFLAC.cmake  FindFreetype2.cmake  FindGDCC.cmake  FindOgg.cmake  FindOpus.cmake  FindSDL2.cmake  FindVorbis.cmake
Code/: CMakeLists.txt  Callback.cpp  Callback.hpp  Codedefs.cpp  Codedefs.hpp  Convert.hpp  ConvertStruct.hpp  Defs.cpp  Defs.hpp  ExtMem.cpp  ExtMem.hpp  FuncPtr.hpp  Function.hpp  Glyph.cpp  Glyph.hpp  MemPtr.hpp  MemStr.cpp  MemStr.hpp  Memory.cpp  Memory.hpp  Native.cpp  Native.hpp  OpCode.cpp  OpCode.hpp  OpList.hpp  Process.cpp  Process.hpp  Program.cpp  Program.hpp  Task.cpp  Task.hpp  TaskExec.cpp  Textdefs.cpp  Textdefs.hpp  Thread.cpp  Thread.hpp  TuplePtr.hpp  Types.hpp
Code/Native/: Debug.cpp  File.cpp  Memory.cpp  Print.cpp  State.cpp  String.cpp
Core/: Alloc.hpp  BinaryIO.hpp  BitStream.cpp  BitStream.hpp  CMakeLists.txt  Color.cpp  Color.hpp  CompilerIntrinsics.hpp  Coord.hpp  Fixed.hpp  HashMap.hpp  HashMapFixed.hpp  IDAllocator.hpp  List.hpp  ListLinkVector.hpp  Math.hpp  Matrix4.hpp  NTS.cpp  NTS.hpp  Point.hpp  ResourceManager.hpp  Search.hpp  Stack.hpp  Store.hpp  String.hpp  Time.hpp  Types.hpp  Vector2.hpp  Vector4.hpp  Zip.cpp  Zip.hpp
Defs/: CMakeLists.txt  Gamedefs.cpp  Gamedefs.hpp  Textdefs.cpp  Textdefs.hpp  Types.hpp
FS/: CMakeLists.txt  Dir.cpp  Dir.hpp  File.cpp  File.hpp  Path.cpp  Path.hpp  Types.hpp
FS/Dir/: Directory.cpp  Pak.cpp  Store.cpp  Union.cpp  Zip.cpp
GL/: CMakeLists.txt  Color.cpp  Color.hpp  Defs.cpp  Defs.hpp  DynamicBuffer.cpp  DynamicBuffer.hpp  Font.cpp  Font.hpp  Native.cpp  OpenGL2.1.c  OpenGL2.1.h  Particle.cpp  Particle.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderData.cpp  ShaderData.hpp  Texture.cpp  Texture.hpp  Types.hpp  Window.cpp  Window.hpp  gl_2_1.c
GL/Renderer/: Draw.cpp  DrawText.cpp  Font.cpp  PrivData.hpp  Shader.cpp  Texture.cpp
GL/Texture/: JPEG.cpp  PAM.cpp  PNG.cpp
GL/Window/: Draw.cpp  PrivData.hpp  Texture.cpp
Game/: BlockMap.cpp  BlockMap.hpp  CMakeLists.txt  Defs.cpp  Defs.hpp  Entity.cpp  Entity.hpp  Event.cpp  Event.hpp  Input.cpp  Input.hpp  Inventory.cpp  Inventory.hpp  Keycode.hpp  MemInfo.hpp  MissileEntity.cpp  MissileEntity.hpp  Native.cpp  Object.cpp  Object.hpp  ObjectMemberList.hpp  ParticleSys.cpp  ParticleSys.hpp  PhysicsThinker.cpp  PhysicsThinker.hpp  PointThinker.cpp  PointThinker.hpp  RenderThinker.cpp  RenderThinker.hpp  ScriptedEntity.cpp  ScriptedEntity.hpp  Sector.cpp  Sector.hpp  Team.cpp  Team.hpp  Thinker.cpp  Thinker.hpp  ThinkerMemberList.hpp  Types.hpp
Sh/: CMakeLists.txt  Command.cpp  Command.hpp  Option.cpp  Option.hpp  Shell.cpp  Shell.hpp  StdIn.cpp  StdIn.hpp  Types.hpp
Sh/Command/: File.cpp  Misc.cpp
doc/: Native.txt  Object.txt
doominati/: CMakeLists.txt  main_doominati.cpp  main_doominati.hpp
